--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -82,7 +82,7 @@
       {% url 'cmp:compras_list' as cmp_url %}
 
 
-      <!-- Nav Item - Pages Collapse Menu -->
+      <!-- Nav Item - Pagina de menu colapsable -->
       <li class="nav-item {% if cat_url in request.path or s_cat_url in request.path  %} active {% endif %}">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
           <i class="fas fa-fw fa-cog"></i>
