--- a/app/cmp/templates/cmp/compras.html
+++ b/app/cmp/templates/cmp/compras.html
@@ -12,7 +12,7 @@
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                    {% if encabezado %} Editar {% else %} Nueva {% endif %} Compra
+                                    {% if encabezado %} Editar {% else %} Nueva {% endif %} Existencia
                                 </div>
                                 <div class="dropdown-divider"></div>
                                 <div class="row">
