--- a/app/fac/templates/fac/facturas.html
+++ b/app/fac/templates/fac/facturas.html
@@ -322,6 +322,10 @@
         $("#enc_id").val("{{ enc.id }}");
         $("#enc_cliente").val("{{ enc.cliente.id }}").change();
         $("#fecha").val("{{ enc.fecha|date:'Y-m-d' }}");
+        $("#enc_rucCi").val("{{ enc.rucCi.id }}").change();
+        $("#enc_celular").val("{{ enc.celular.id }}").change();
+        $("#enc_direccion").val("{{ enc.direccion.id }}").change();
+
         $("#sub_total").val("{{ enc.sub_total }}");
         $("#descuento").val("{{ enc.descuento }}");
         $("#total").val({{ enc.total }});
@@ -444,6 +448,9 @@ $("#popup").on('hidden.bs.modal',function(){
             $("#enc_cliente").append('<option value="0">Seleccione Cliente</option>')
             for(var i=0;i<data.length;i++){
                 $("#enc_cliente").append(`<option value="${data[i].id}">${data[i].nombres} ${data[i].apellidos} </option>`)
+
+                $("#enc_rucCi").append(`<option value="${data[i].id}">${data[i].rucCi} </option>`)
+
             }
             $("#enc_cliente").val(a).change()
         },
