--- a/app/inv/templates/inv/producto_list.html
+++ b/app/inv/templates/inv/producto_list.html
@@ -5,6 +5,10 @@
   <!-- Card Header - Dropdown -->
   <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
     <h6 class="m-0 font-weight-bold text-primary">Listado de Productos</h6>
+    <div>
+      <a href="{% url 'inv:um_list' %}" class="btn btn-success" ><i ></i><=Unidad de medida</a>
+      {% comment %} <a href="{% url 'inv:marca_list' %}" class="btn btn-success" ><i ></i>Marca=></a> {% endcomment %}
+    </div>
     <div class="dropdown no-arrow">
       <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
