--- a/app/inv/templates/inv/subcategoria_list.html
+++ b/app/inv/templates/inv/subcategoria_list.html
@@ -5,6 +5,10 @@
     <!-- Card Header - Dropdown -->
     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
       <h6 class="m-0 font-weight-bold text-primary">Listado de Sub Categorías</h6>
+      <div>
+        <a href="{% url 'inv:categoria_list' %}" class="btn btn-success" ><i ></i><=Categoria</a>
+        <a href="{% url 'inv:marca_list' %}" class="btn btn-success" ><i ></i>Marca=></a>
+      </div>
       <div class="dropdown no-arrow">
         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
