--- a/app/fac/templates/fac/factura_one.html
+++ b/app/fac/templates/fac/factura_one.html
@@ -28,10 +28,10 @@
             <b>Factura No.:</b>&nbsp;&nbsp;{{enc.id}}&nbsp;&nbsp;<br>
             <b>Fecha Fact:</b>&nbsp;&nbsp;{{enc.fecha}}&nbsp;&nbsp; <br>
             <b>Cliente:</b>&nbsp;&nbsp;{{enc.cliente}}<br>
+            <b>Ci/Ruc:</b>&nbsp;&nbsp;{{enc.cliente.rucCi}}<br>
+            <b>Telefono:</b>&nbsp;&nbsp;{{enc.cliente.celular}}<br>
+            <b>Direccion:</b>&nbsp;&nbsp;{{enc.cliente.direccion}}<br>
             
-            <b>Ruc:</b>&nbsp;&nbsp;{{enc.rucCi}}<br>
-            <b>Telefono:</b>&nbsp;&nbsp;{{enc.celular}}<br>
-            <b>Direccion:</b>&nbsp;&nbsp;{{enc.direccion}}<br>
             <br><br>
         </small>
         <hr size="1px" color="black" />
